kqed_dev4/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>External Cases</fullName>
        <description>Process for Program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>In Development</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Program</fullName>
        <description>Process for Program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On-Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Email_Notification_3__c</fullName>
        <inlineHelpText>Include a non-Salesforce user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Topic__c</fullName>
        <inlineHelpText>Additional detail of the issue.</inlineHelpText>
        <label>Case Sub Topic</label>
        <picklist>
            <controllingField>Case_Topic__c</controllingField>
            <picklistValues>
                <fullName>1 Renewal Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgement Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add In Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment: Add/Remove/Change Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment: Credit Card Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment: Refund/Partial Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual (NW, RN, RJ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anonymous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bequest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable/Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel: Dissatisfied/Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel: Financial Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel: Moved Out of Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel: Non-Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Topic__c</fullName>
        <inlineHelpText>Brief explanation of the issue.</inlineHelpText>
        <label>Case Topic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Acknowledgement Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Info Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts/Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Research/Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giveaways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Directions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing/Rights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_contacted__c</fullName>
        <label>Days since contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_created__c</fullName>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Alternative_Email_Notification_1__c</fullName>
        <inlineHelpText>Include another user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Alternative_Email_Notification_2__c</fullName>
        <inlineHelpText>Include another user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Completed_By__c</fullName>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Confidence__c</fullName>
        <inlineHelpText>e.g. +/- 10 hours</inlineHelpText>
        <label>Confidence (hours)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Decided_By__c</fullName>
        <label>Decided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Decided_On__c</fullName>
        <label>Decided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Decider_Phone__c</fullName>
        <formula>Issue_Decided_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decider Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Decision_Required_By__c</fullName>
        <label>Decision Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Detail_Description__c</fullName>
        <label>Detail Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Development_Hours__c</fullName>
        <label>Est Development Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Doc_and_Deployment_Hours__c</fullName>
        <label>Est Documentation and Deployment Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Testing_Hours__c</fullName>
        <label>Est Testing Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Total_Hours__c</fullName>
        <formula>Issue_Est_Development_Hours__c  +  Issue_Est_Testing_Hours__c  +  Issue_Est_Doc_and_Deployment_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_for_Analysis__c</fullName>
        <label>Est for Analysis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Issue_Justification__c</fullName>
        <inlineHelpText>Tangible and intangible considerations, anticipated benefits</inlineHelpText>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Planned_Release__c</fullName>
        <label>Planned Release (or Phase)(if Postponed)</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Requester_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <inlineHelpText>Issue - technical problem or error;
Change Request - need to change layout or functionality;
Feature Request - integrate new functionality;
Request for Information - need assistance with a process</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_URL__c</fullName>
        <inlineHelpText>Link (URL) where issue occured.</inlineHelpText>
        <label>Issue URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <description>Description Name on a Program</description>
        <inlineHelpText>If the case is in reference to a program, search and select the applicable program.  One program may be selected per case.</inlineHelpText>
        <label>Program Description</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases (Program Description)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>If the case is in reference to a program, search and select the applicable program.  One program may be selected per case.</inlineHelpText>
        <label>TV/Radio Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Radio_Program__c</fullName>
        <label>Radio Program</label>
        <picklist>
            <picklistValues>
                <fullName>Jazz on WGBH (Genre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erick Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Schwartz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Fuller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Carlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Take Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emily Rooney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Things Considered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Wait Don&apos;t Tell Me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Describes the impact of the issue.</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>Specific station in which the case is in reference to. WGBH should be selected for non station-specific requests.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCRB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>confidential__c</fullName>
        <label>Confidential</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Contact Date</description>
        <inlineHelpText>Date case is opened, date of first contact.</inlineHelpText>
        <label>Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>long_comments__c</fullName>
        <label>Long Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>program_code__c</fullName>
        <description>Program</description>
        <label>Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>Region</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_category__c</fullName>
        <description>Response Category</description>
        <inlineHelpText>Response Category</inlineHelpText>
        <label>Response Category</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_date__c</fullName>
        <description>Response Date</description>
        <inlineHelpText>Response Date</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>response_type__c</fullName>
        <description>Response Type</description>
        <inlineHelpText>Response Type</inlineHelpText>
        <label>Response Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sender__c</fullName>
        <label>Sender</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solicitor__c</fullName>
        <label>Solicitor</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <description>Source</description>
        <inlineHelpText>Source</inlineHelpText>
        <label>Source</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>Staff</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>station_support__c</fullName>
        <description>Station Support</description>
        <inlineHelpText>Station Support</inlineHelpText>
        <label>Station Support</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_interactions_Id__c</fullName>
        <description>TA Interactions external Id</description>
        <externalId>true</externalId>
        <label>TA Interactions Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>technique__c</fullName>
        <label>Technique</label>
        <picklist>
            <picklistValues>
                <fullName>Call to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation sent to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolicited Call for Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Technique to update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Strategy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail to Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Name Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Pull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handled by Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>technique_value__c</fullName>
        <label>Technique Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warn_expire_date__c</fullName>
        <description>Warn Expire Date</description>
        <inlineHelpText>Warn Expire Date</inlineHelpText>
        <label>Warn Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>warning__c</fullName>
        <label>Warning</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>contact_date__c</columns>
        <columns>Station__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Topic__c</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>summary__c</columns>
        <columns>staff__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Cases</label>
    </listViews>
    <listViews>
        <fullName>All_On_Hold_Cases</fullName>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Topic__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On-Hold</value>
        </filters>
        <label>All On-Hold Cases</label>
    </listViews>
    <listViews>
        <fullName>Feedback</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Case_Topic__c</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Feedback</value>
        </filters>
        <filters>
            <field>Case_Topic__c</field>
            <operation>contains</operation>
            <value>Content Feedback,Feedback</value>
        </filters>
        <filters>
            <field>Case_Sub_Topic__c</field>
            <operation>equals</operation>
            <value>Feedback</value>
        </filters>
        <label>Feedback</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Information</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Case_Topic__c</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Information,Other</value>
        </filters>
        <filters>
            <field>Case_Topic__c</field>
            <operation>equals</operation>
            <value>Information,Information &amp; Directions</value>
        </filters>
        <filters>
            <field>Case_Sub_Topic__c</field>
            <operation>equals</operation>
            <value>Building Information,Contact Information Request,Date/Time Information</value>
        </filters>
        <label>Information</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>International - Escalations</queue>
    </listViews>
</CustomObject>